--- a/MarketingCompanyDomain/pom.xml
+++ b/MarketingCompanyDomain/pom.xml
@@ -21,6 +21,12 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bowergithub.angular</groupId>
+            <artifactId>angular</artifactId>
+            <version>6.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
