--- a/MarketingCompanyLogic/pom.xml
+++ b/MarketingCompanyLogic/pom.xml
@@ -23,20 +23,26 @@
                 <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
-
-<!--
-  <dependency>
-        <groupId>marketing.company</groupId>
-        <artifactId>MarketingCompany</artifactId>
-        <version>${project.version}</version>
-        <scope>provided</scope>
-    </dependency>
-       <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>5.1.8.RELEASE</version>
+        <dependency>
+            <groupId>org.webjars.bowergithub.angular</groupId>
+            <artifactId>angular</artifactId>
+            <version>6.1.0</version>
+            <scope>compile</scope>
         </dependency>
-        -->
+
+        <!--
+          <dependency>
+                <groupId>marketing.company</groupId>
+                <artifactId>MarketingCompany</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+               <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-tx</artifactId>
+                    <version>5.1.8.RELEASE</version>
+                </dependency>
+                -->
     </dependencies>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
