--- a/MarketingCompanyRepository/src/test/resources/db-test.properties
+++ b/MarketingCompanyRepository/src/test/resources/db-test.properties
@@ -1,4 +1,7 @@
-spring.datasource.url="jdbc:mysql://localhost/MarketingCompany"
-spring.datasource.username="root"
-spring.datasource.password="root"
-spring.datasource.driver-class-name="com.mysql.cj.jdbc.Driver"
+spring.datasource.url=jdbc:mysql://localhost:3306/MarketingCompany
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.datasource=mysql
+spring.jpa.datasource-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.open-in-view=true
