--- a/MarketingCompanyTranslator/pom.xml
+++ b/MarketingCompanyTranslator/pom.xml
@@ -26,6 +26,12 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bowergithub.angular</groupId>
+            <artifactId>angular</artifactId>
+            <version>6.1.0</version>
+            <scope>compile</scope>
+        </dependency>
 
         <!--
 
