--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <groupId>marketing.company</groupId>
     <artifactId>MarketingCompany</artifactId>
     <packaging>pom</packaging>
+    <properties>
+        <java.version>1.8</java.version>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <haltOnFailure>false</haltOnFailure>
+    </properties>
     <modules>
         <module>MarketingCompanyDomain</module>
         <module>MarketingCompanyLogic</module>
@@ -25,18 +31,31 @@
         <module>MarketingCompanyWebApplication</module>
     </modules>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <haltOnFailure>false</haltOnFailure>
-    </properties>
+
 
     <dependencyManagement>
         <dependencies>
 
 
 
+
+                <dependency>
+                    <groupId> org.apache.cassandra</groupId>
+                    <artifactId>cassandra-all</artifactId>
+                    <version>0.8.1</version>
+
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.slf4j</groupId>
+                            <artifactId>slf4j-log4j12</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>log4j</groupId>
+                            <artifactId>log4j</artifactId>
+                        </exclusion>
+                    </exclusions>
+
+                </dependency>
 
 
 
@@ -47,24 +66,24 @@
                 <scope>compile</scope>
             </dependency>
 
-<!--
+            <!--
 
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-bean-validators</artifactId>
-                <version>${springfox-swagger.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.fasterxml.jackson.annotation</groupId>
-                        <artifactId>jackson.annotation</artifactId>
-                    </exclusion>
-                    <exclusion>
-                        <groupId>org.slf4j</groupId>
-                        <artifactId>slf4j-api</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
--->
+                        <dependency>
+                            <groupId>io.springfox</groupId>
+                            <artifactId>springfox-bean-validators</artifactId>
+                            <version>${springfox-swagger.version}</version>
+                            <exclusions>
+                                <exclusion>
+                                    <groupId>com.fasterxml.jackson.annotation</groupId>
+                                    <artifactId>jackson.annotation</artifactId>
+                                </exclusion>
+                                <exclusion>
+                                    <groupId>org.slf4j</groupId>
+                                    <artifactId>slf4j-api</artifactId>
+                                </exclusion>
+                            </exclusions>
+                        </dependency>
+            -->
 
 
             <dependency>
@@ -106,75 +125,84 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bowergithub.angular</groupId>
+            <artifactId>angular</artifactId>
+            <version>6.1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
                 <plugin>
-                              <groupId>org.jacoco</groupId>
-                                   <artifactId>jacoco-maven-plugin</artifactId>
-                                   <version>0.8.3</version>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.3</version>
 
-                                   <configuration>
-                                    <haltOnFailure>${haltOnFailure}</haltOnFailure>
-                                  <rules>
-                                       <rule>
-                                             <element>CLASS</element>
-                                            <execudes>
-                                                    <exclude>marketing.company.domain.dto.*</exclude>
-                                                    <exclude>marketing.company.config.RepositoryConfig</exclude>
-                                                    <exclude>marketing.company.logic.config.LogicConfig</exclude>
-                                                    <exclude>marketing.company.config</exclude>
+                    <configuration>
+                        <haltOnFailure>${haltOnFailure}</haltOnFailure>
+                        <rules>
+                            <rule>
+                                <element>CLASS</element>
+                                <execudes>
+                                    <!-- Cheack again
+                                        <exclude>marketing.company.domain.dto.*</exclude>
+                                        <exclude>marketing.company.config.RepositoryConfig</exclude>
+                                        <exclude>marketing.company.logic.config.LogicConfig</exclude>
+                                        <exclude>marketing.company.config</exclude>
+                                         <exclude>marketing.company.config</exclude>
+  -->
+                                    <exclude>marketing.company.logic.config.LogicConfig</exclude>
 
-                                                                           <exclude>marketing.company.web.config</exclude>
-                                                </execudes>
-                                                <limits>
-                                                    <limit>
-                                                        <counter>INSTRUCTION</counter>
-                                                        <value>COVEREDRATIO</value>
-                                                        <minimun>0.8</minimun>
-                                                    </limit>
-                                                    <limit>
-                                                        <counter>LINE</counter>
-                                                        <value>COVEREDRATIO</value>
-                                                        <minimun>0.8</minimun>
-                                                    </limit>
-                                                    <limit>
-                                                        <counter>BRANCH</counter>
-                                                        <value>COVEREDRATIO</value>
-                                                        <minimun>0.8</minimun>
-                                                </limit>
-                                              </limits>
+                                </execudes>
+                                <limits>
+                                    <limit>
+                                        <counter>INSTRUCTION</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimun>0.8</minimun>
+                                    </limit>
+                                    <limit>
+                                        <counter>LINE</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimun>0.8</minimun>
+                                    </limit>
+                                    <limit>
+                                        <counter>BRANCH</counter>
+                                        <value>COVEREDRATIO</value>
+                                        <minimun>0.8</minimun>
+                                    </limit>
+                                </limits>
 
-                                        </rule>
-                                    </rules>
-                            </configuration>
+                            </rule>
+                        </rules>
+                    </configuration>
 
-                                    <executions>
+                    <executions>
 
-                                        <execution>
-                                            <id>jacoco-check</id>
-                                            <phase>test</phase>
-                                            <goals>
-                                                <goal>check</goal>
-                                            </goals>
-                                        </execution>
-                                        <execution>
-                                            <id>default-prepare-agent</id>
-                                            <goals>
-                                                <goal>prepare-agent</goal>
-                                            </goals>
-                                        </execution>
-                                        <execution>
-                                            <id>default-report</id>
-                                            <phase>prepare-package</phase>
-                                            <goals>
-                                                <goal>report</goal>
-                                            </goals>
-                                        </execution>
-                                    </executions>
-                             </plugin>
+                        <execution>
+                            <id>jacoco-check</id>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>check</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>default-prepare-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>default-report</id>
+                            <phase>prepare-package</phase>
+                            <goals>
+                                <goal>report</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
