--- a/MarketingCompanyTranslator/pom.xml
+++ b/MarketingCompanyTranslator/pom.xml
@@ -8,13 +8,14 @@
         <groupId>marketing.company</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-
     <artifactId>MarketingCompanyTranslator</artifactId>
     <packaging>jar</packaging>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
     <dependencies>
-
-        <dependency>
+       <dependency>
             <groupId>marketing.company</groupId>
             <artifactId>MarketingCompanyDomain</artifactId>
             <version>${project.version}</version>
@@ -26,26 +27,14 @@
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
-        <dependency>
-            <groupId>org.webjars.bowergithub.angular</groupId>
-            <artifactId>angular</artifactId>
-            <version>6.1.0</version>
-            <scope>compile</scope>
-        </dependency>
-
-        <!--
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>5.3.10</version>
-        </dependency>
-        -->
     </dependencies>
-
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.3</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
