--- a/MarketingCompanyWebApplication/pom.xml
+++ b/MarketingCompanyWebApplication/pom.xml
@@ -3,72 +3,74 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+
+    </properties>
+
     <parent>
-        <artifactId>MarketingCompany</artifactId>
         <groupId>marketing.company</groupId>
+        <artifactId>MarketingCompany</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>MarketingCompanyWebApplication</artifactId>
     <packaging>war</packaging>
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+        <dependencies>
+            <dependency>
+                <groupId>marketing.company</groupId>
+                <artifactId>MarketingCompanyLogic</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>marketing.company</groupId>
+                <artifactId>MarketingCompanyDomain</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>5.1.8.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-bean-validators</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>5.1.8.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-autoconfigure</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.9.2</version>
+            </dependency>
 
-       <dependencies>
-           <dependency>
-               <groupId>marketing.company</groupId>
-               <artifactId>MarketingCompanyDomain</artifactId>
-               <version>${project.version}</version>
-               <scope>provided</scope>
-           </dependency>
-           <dependency>
-               <groupId>marketing.company</groupId>
-               <artifactId>MarketingCompanyLogic</artifactId>
-               <version>${project.version}</version>
-           </dependency>
 
+        </dependencies>
 
-           <dependency>
-               <groupId>org.springframework.boot</groupId>
-               <artifactId>spring-boot-autoconfigure</artifactId>
-               <version>2.1.6.RELEASE</version>
-           </dependency>
-
-           <dependency>
-               <groupId>org.springframework</groupId>
-               <artifactId>spring-web</artifactId>
-               <version>5.1.8.RELEASE</version>
-           </dependency>
-
-           <dependency>
-               <groupId>io.springfox</groupId>
-               <artifactId>springfox-bean-validators</artifactId>
-               <version>2.9.2</version>
-           </dependency>
-
-
-
-       </dependencies>
-
-       <build>
-           <plugins>
-               <plugin>
-                   <groupId>org.apache.maven.plugins</groupId>
-                   <artifactId>maven-war-plugin</artifactId>
-                   <configuration>
-                     <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-                     <webXml>src\test\webapp\WEB-INF\web.xml</webXml>
-                   </configuration>
-               </plugin>
-               <plugin>
-                   <groupId>org.springframework.boot</groupId>
-                   <artifactId>spring-boot-maven-plugin</artifactId>
-
-               </plugin>
-           </plugins>
-       </build>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.1.6.RELEASE</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
