--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <description>Demo_project_for_Spring_Boot</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -9,16 +11,11 @@
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
-    <version>1.0-SNAPSHOT</version>
-    <name>MarketingCompany</name>
-    <description>Demo project for Spring Boot</description>
-    <groupId>marketing.company</groupId>
     <artifactId>MarketingCompany</artifactId>
+    <groupId>marketing.company</groupId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <java.version>1.8</java.version>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <haltOnFailure>false</haltOnFailure>
@@ -31,67 +28,33 @@
         <module>MarketingCompanyWebApplication</module>
     </modules>
 
-
-
     <dependencyManagement>
         <dependencies>
-
-
-
-
-                <dependency>
-                    <groupId> org.apache.cassandra</groupId>
-                    <artifactId>cassandra-all</artifactId>
-                    <version>0.8.1</version>
-
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.slf4j</groupId>
-                            <artifactId>slf4j-log4j12</artifactId>
-                        </exclusion>
-                        <exclusion>
-                            <groupId>log4j</groupId>
-                            <artifactId>log4j</artifactId>
-                        </exclusion>
-                    </exclusions>
-
-                </dependency>
-
-
-
             <dependency>
                 <groupId>org.jetbrains</groupId>
                 <artifactId>annotations</artifactId>
                 <version>22.0.0</version>
-                <scope>compile</scope>
             </dependency>
-
-            <!--
-
-                        <dependency>
-                            <groupId>io.springfox</groupId>
-                            <artifactId>springfox-bean-validators</artifactId>
-                            <version>${springfox-swagger.version}</version>
-                            <exclusions>
-                                <exclusion>
-                                    <groupId>com.fasterxml.jackson.annotation</groupId>
-                                    <artifactId>jackson.annotation</artifactId>
-                                </exclusion>
-                                <exclusion>
-                                    <groupId>org.slf4j</groupId>
-                                    <artifactId>slf4j-api</artifactId>
-                                </exclusion>
-                            </exclusions>
-                        </dependency>
-            -->
-
-
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-bean-validators</artifactId>
+                <version>${springfox-swagger.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.annotation</groupId>
+                        <artifactId>jackson.annotation</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-api</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>2.1.6.RELEASE</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
@@ -102,11 +65,14 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <scope>runtime</scope>
             </dependency>
-
+            <dependency>
+                <groupId>org.webjars.bowergithub.angular</groupId>
+                <artifactId>angular</artifactId>
+                <version>6.1.0</version>
+                <scope>compile</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
-
 
     <dependencies>
         <dependency>
@@ -125,14 +91,8 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.webjars.bowergithub.angular</groupId>
-            <artifactId>angular</artifactId>
-            <version>6.1.0</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
 
+    </dependencies>
     <build>
         <pluginManagement>
             <plugins>
@@ -140,60 +100,18 @@
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
                     <version>0.8.3</version>
-
                     <configuration>
                         <haltOnFailure>${haltOnFailure}</haltOnFailure>
                         <rules>
                             <rule>
                                 <element>CLASS</element>
                                 <execudes>
-                                    <!-- Cheack again
-                                        <exclude>marketing.company.domain.dto.*</exclude>
-                                        <exclude>marketing.company.config.RepositoryConfig</exclude>
-                                        <exclude>marketing.company.logic.config.LogicConfig</exclude>
-                                        <exclude>marketing.company.config</exclude>
-                                         <exclude>marketing.company.config</exclude>
-  -->
-                                    <exclude>marketing.company.logic.config.LogicConfig</exclude>
 
                                 </execudes>
-                                <limits>
-                                    <limit>
-                                        <counter>INSTRUCTION</counter>
-                                        <value>COVEREDRATIO</value>
-                                        <minimun>0.8</minimun>
-                                    </limit>
-                                    <limit>
-                                        <counter>LINE</counter>
-                                        <value>COVEREDRATIO</value>
-                                        <minimun>0.8</minimun>
-                                    </limit>
-                                    <limit>
-                                        <counter>BRANCH</counter>
-                                        <value>COVEREDRATIO</value>
-                                        <minimun>0.8</minimun>
-                                    </limit>
-                                </limits>
-
                             </rule>
                         </rules>
                     </configuration>
-
                     <executions>
-
-                        <execution>
-                            <id>jacoco-check</id>
-                            <phase>test</phase>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>default-prepare-agent</id>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                        </execution>
                         <execution>
                             <id>default-report</id>
                             <phase>prepare-package</phase>
@@ -206,5 +124,6 @@
             </plugins>
         </pluginManagement>
     </build>
-
 </project>
+        <!-- <springfox-angular-version>12.2.12</springfox-angular-version>-->
+        <!-- <name>MarketingCompany</name>-->
